[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt_events"
version = "0.1.0"
description = "Utility module providing event queues and JS style async awaiter promises"
readme = "README.md"
requires-python = ">=3.0"
dependencies = []
license = { text = "Unlicense" }
authors = [
  { name = "Illinois Plasma Institute" },
  { name = "Alp Doganer", email = "doganer2@illinois.edu" },
]
maintainers = [
  { name = "Alp Doganer", email = "doganer2@illinois.edu" },
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.MAIN]
init-hook = """
try: import pylint_venv
except ImportError: pass
else: pylint_venv.inithook()
"""
